# kedro-ibis-tutorial

./: .pdm-python  00 - Welcome.ipynb  01 - Getting Started with Ibis.ipynb  README.md  pyproject.toml
