[project]
name = "kedro-ibis-tutorial"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "ibis-framework[duckdb,examples,polars]>=9.1.0",
    "ibis-ml>=0.1.0",
    "kedro>=0.19.6",
    "kedro-datasets[ibis-duckdb]>=4.0.0",
    "kedro-telemetry>=0.5.0",
    "kedro-viz>=9.1.0",
    "scikit-learn>=1.5.1",
    "ipykernel>=6.29.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache 2.0"}


[tool.pdm]
distribution = false
